only.)  When run on OSX the Py* apps have a new item on the Options
menu for controlling this setting if you would like to experiment with
it.

Updated wx.lib.calendar with many fixes and enhancements from Joerg
"Adi" Sieker. 

Added wx.Display and wx.VideoMode.

AppleEvents can be handled by overriding wx.App methods MacOpenFile,
MacPrintFile, MacNewFile, and MacReopenApp.




2.4.2.4
-------

Use wxSTC in the demo for displaying the soucre code of the samples.

Lots of bug fixes and such from the wxWindows folks.

Added wxPython.lib.newevent from Miki Tebeka.  Its usage is
demonstrated in the Threads sample in the demo.

Updates to wxMaskedEditCtrl.

Added wxMaskedNumCtrl.

Added Chris Barker's FloatCanvas.



2.4.1.2
-------

Added wxScrolledPanel from Will Sadkin

Added SetShape method to top level windows (e.g. wxFrame.)

Changed wxSWIG to not generate Python code using apply, (since it will
be deprecated in the future) wxSWIG will use ``spam(*args, **kw)`` syntax
instead.  Also changed the generated __repr__ methods to be a bit more
informative.

Made the version number information more robust and uh, informative.
Also added asserts to check that the major.minor versions of wxPython
and wxWindows match.

Added the new wx "renamer" package that will dynamically import from
the wxPython package and rename wxFooBar --> FooBar.  That means that
people can do imports without ``"import *"`` and can use names like
wx.Frame instead of wx.wxFrame.  This is phase 1 of a full transition
to the new namespace.

Updated Scintilla to 1.52.  I also changed it to use wxListCtrl
instead of wxListBox for the AutoComplete window, added the ability to
use custom bitmaps in the margin and in the AutoComplete windows, and
worked out how to do proper clipping of child windows on wxGTK.

Patrick O'Brien's PyCrust package has been renamed to Py and now
includes several new tools.  As part of the change the location of the